--- a/BackEnd/ToDoApi.csproj
+++ b/BackEnd/ToDoApi.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>7f7034bc-532b-401e-94e1-018dcd101552</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
